﻿5.0.0 [TBD]
[+] Add .NET 6.0 support.
[-] Drop .NET 4.0 support.
[*] DictionaryUtils.GetValueOrDefault is only available for netstandard 1.6 and 2.0 .

4.1.0 [2021-11-25]
[+] Add .NET 5.0 target.
[+] Add Pairwise to collection utils.
[*] Fix MetadataDto class deserialization for System.Text.Json for .NET 5.0 .
[*] Add more nullable reference type annotations.
[*] StringUtils.ParseOrDefault for enums now has Enum type constrain.

4.0.0 [2021-04-06]
[*] CollectionUtils.OrderMultiple now makes case insensitive keys search.
[*] CollectionUtils.Diff now has overload with IEqualityComparer with much better performance.
[*] CollectionUtils.Diff accepts delegate instead of IComparer interface.

3.3.1 [2021-01-20]
[*] Fix StringUtils.ParseOrDefaultExtended NRE if null value.

3.3.0 [2020-11-30]
[*] Rename StringUtils.ParseOrDefault extended method for bool to StringUtils.ParseOrDefaultExtended .
[+] New method DateTimeUtils.Add . It allows add specific amount of period "DateTimePeriod" to date.
[*] DateTimeUtils.GetDiff now returns negative values.
[*] DateTimeUtils.GetRange now returns reverse collection if "from" date is greater than "to" date.
[+] Add DateTimeUtils overloads for DateTimeOffset: GetRange, Add, GetStartOfPeriod, GetEndOfPeriod, Truncate.
[+] Add CollectionUtils.ChunkSelectRangeAsync for IAsyncEnumerable.
[*] Make parameter update of CollectionUtils.ApplyDiff optional.
[*] Improve CollectionUtils chunk select methods validation.

3.2.2 [2020-07-06]
[+] Add extension method ICollection<T>.Add that allows adding enumerable.
[*] InvalidOrderFieldException now returns all available fields to order by.
[*] Fix OrderMultiple call for queryables.

3.2.0 [2020-06-23]
[+] Add netstandard 2.1 support.
[+] The package is built with nullable reference type annotations.
[-] Remove AtomicUtils.SafeSwap .
[*] Use Count() call for enumerable ChunkSelectRange because it has much more effective implementation.
[+] Add constructor to DiffResult.