@@ -1,6 +1,7 @@
 ﻿5.0.0 [TBD]
 [+] Add .NET 6.0 support.
 [-] Drop .NET 4.0 support.
+[-] Drop ObjectUtils.CreateInstanceWithServiceProvider . Use ActivatorUtilities.CreateInstance .
 [*] DictionaryUtils.GetValueOrDefault is only available for netstandard 1.6 and 2.0 .
 
 4.1.0 [2021-11-25]
